--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-PyQt6
-python-escpos
-qrcode
-reportlab
-pyinstaller
+PyQt6==6.10.0
+python-escpos==3.1
+qrcode==8.2
+reportlab==4.4.5
+pyinstaller==6.17.0
+SQLAlchemy==2.0.44
